--- a/downloadcss.css
+++ b/downloadcss.css
@@ -62,3 +62,11 @@
                 position: relative;
                 transition: 0.5s;
             }
+            html { 
+                font-size:80%; 
+            }
+            @media (min-width: 640px) { body {font-size:1rem;} } 
+            @media (min-width:960px) { body {font-size:1.2rem;} } 
+            @media (min-width:1100px) { body {font-size:1.5rem;} }
+            
+            
