--- a/downloadcss.css
+++ b/downloadcss.css
@@ -28,9 +28,10 @@
             }
             .mod{
                 color:white;
+                font-size: medium;
                 font-family: calibri;
             }
-            .btn {
+            .btn3 {
                 background-color: #2E9CD8;
                 border: none;
                 width: 150px;
@@ -40,8 +41,9 @@
                 text-decoration: none;
                 display: inline-block;
                 font-size: 16px;
+                cursor: pointer;
                  }
-                 .btn span:after {
+            .btn3 span:after {
                 content: '\25bc';
                 position: absolute;
                 opacity: 0;
@@ -49,21 +51,22 @@
                 right: -15px;
                 transition: 0.5s;
             }
-            .btn:hover span {
+            .btn3:hover span {
                 padding-right: 15px;
             }
-            .btn:hover span:after{
+            .btn3:hover span:after{
                 opacity: 1;
                 right: 0;
             }
-            .btn span{
+            .btn3 span{
                 cursor: pointer;
                 display: inline-block;
                 position: relative;
                 transition: 0.5s;
             }
+            
             html { 
-                font-size:80%; 
+                font-size: 100%; 
             }
             @media (min-width: 640px) { body {font-size:1rem;} } 
             @media (min-width:960px) { body {font-size:1.2rem;} } 
